# elk

./: .gitignore  CMakeLists.txt  README.txt  create_build.sh  elk_play.cpp  source_readme.txt  tokens.txt
.cache/clangd/index/: Status.hpp.791079AF207E11A3.idx  main.cpp.2AF701762BDCC687.idx  main2.cpp.856E25A5FEB16C47.idx  main3.cpp.AE4920E6C31A4F89.idx
elk/: IO.hpp  Interface.hpp  Module.hpp  Monad.hpp  Type.hpp  commands.h  construct.cpp  gc.cpp  gc.h  main.cpp  main2.cpp  main3.cpp  runtime.h  scope.h
elk/compiler/: Graph.hpp  defs.hpp  hoot.hpp
elk/concepts/: Debuggable.hpp  Monadic.hpp  Named.hpp
elk/std_lib/interfaces/: Reflexive.hpp  Shapeable.hpp
elk/std_lib/io/: Console.hpp
elk/std_lib/monads/: Future.hpp  Maybe.hpp
elk/std_lib/types/: Int.hpp  Rec.hpp  Str.hpp
elk/utils/: Status.hpp  meta.hpp
integrations/: syntax.iro
integrations/vscode-elk-lang/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
integrations/vscode-elk-lang/syntaxes/: elk.tmLanguage  elk.tmLanguage.json
log/: 01_context_idea.txt  02_type_system_musings.fs  03_reflection_and_json.md  04_syntax-maybe.txt  05_records.md  06_more_syntax.txt  07_even_more_syntax.txt  08_graphs_and_boundaries.dot  09_modules.elk  10_the_syntax_never_ends.elk  11_query_syntax.elk  12_variable_syntax.elk  13_the_fibonacci_problem
playground/: base_function.elk  base_type.elk  io_test.cpp  io_test.sh  main.cpp  main.sh  meta.elk  record.elk  test.elk  test_1.elk  test_2.elk  test_3.elk  test_4.elk  test_5.elk  traverse.coffee
test/: graph.cpp  type_relations.cpp
